volumes of meta updated

--- a/P001732.opf/meta.yml
+++ b/P001732.opf/meta.yml
@@ -4,4 +4,149 @@ source_metadata:
   id: bdr:W29307
   title: གསུང་འབུམ། ངག་དབང་ཀུན་དགའ་བསོད་ནམས།
   author: ''
-  volumes: {}
+  volumes:
+    68d95232215142de90bb557c35f3bfdd:
+      image_group_id: I5209
+      title: ''
+      volume_number: 1
+      total_pages: 692
+    2852084efbdc491db875a74c4e92fd8a:
+      image_group_id: I5210
+      title: ''
+      volume_number: 2
+      total_pages: 786
+    542833ff08da413bbd2550f76179955e:
+      image_group_id: I5211
+      title: ''
+      volume_number: 3
+      total_pages: 694
+    cabbd4d105da4858afbe94f7f5a5b9c7:
+      image_group_id: I5212
+      title: ''
+      volume_number: 4
+      total_pages: 778
+    a22756616b0043b494f54be7199636bc:
+      image_group_id: I5213
+      title: ''
+      volume_number: 5
+      total_pages: 796
+    d1500f7522cb4c0e834d12fa942988e1:
+      image_group_id: I5214
+      title: ''
+      volume_number: 6
+      total_pages: 774
+    f7d48ea5defa466390715b28cfcc95e7:
+      image_group_id: I5215
+      title: ''
+      volume_number: 7
+      total_pages: 852
+    16124e0f6349456f8593c2a9f42479bd:
+      image_group_id: I5216
+      title: ''
+      volume_number: 8
+      total_pages: 834
+    556b0ca61c414912a016fa4c174b0b11:
+      image_group_id: I5217
+      title: ''
+      volume_number: 9
+      total_pages: 670
+    f1b083ff46894b93b11b9cb7251f82d5:
+      image_group_id: I5218
+      title: ''
+      volume_number: 10
+      total_pages: 732
+    6d53f220a941491c841bf857218b6a41:
+      image_group_id: I5219
+      title: ''
+      volume_number: 11
+      total_pages: 798
+    c0d3f519f4b34169a0d09a6e8ef2bf7f:
+      image_group_id: I5220
+      title: ''
+      volume_number: 12
+      total_pages: 724
+    07be257a866f4a14a5696b6f9fe8c2d8:
+      image_group_id: I5221
+      title: ''
+      volume_number: 13
+      total_pages: 738
+    8ef781efd66043b895cfe2abbf600673:
+      image_group_id: I5222
+      title: ''
+      volume_number: 14
+      total_pages: 720
+    80e95b0cf90b4a6ab086209c08267905:
+      image_group_id: I5223
+      title: ''
+      volume_number: 15
+      total_pages: 836
+    93174153a95445c18add80cb237ed690:
+      image_group_id: I5224
+      title: ''
+      volume_number: 16
+      total_pages: 768
+    bc0600ca87234df98d1de67f051bf389:
+      image_group_id: I5225
+      title: ''
+      volume_number: 17
+      total_pages: 662
+    52cd5dbcdcd0492685f30aa3ffbc4151:
+      image_group_id: I5226
+      title: ''
+      volume_number: 18
+      total_pages: 740
+    8d7d814447224307a7e3f6132c6c0431:
+      image_group_id: I5227
+      title: ''
+      volume_number: 19
+      total_pages: 726
+    868ac7d827814fc0af84551778b18f0f:
+      image_group_id: I5228
+      title: ''
+      volume_number: 20
+      total_pages: 716
+    e604aa28604941ae9d504cf245a55ab7:
+      image_group_id: I5229
+      title: ''
+      volume_number: 21
+      total_pages: 700
+    e8dc038e10d7416786618cc015f3134e:
+      image_group_id: I5230
+      title: ''
+      volume_number: 22
+      total_pages: 736
+    c31e11ffc2f24515805500646f923700:
+      image_group_id: I5231
+      title: ''
+      volume_number: 23
+      total_pages: 736
+    41bee0284b734aaea6cef7cc07ad2dc5:
+      image_group_id: I5232
+      title: ''
+      volume_number: 24
+      total_pages: 734
+    ff3c5208b16c40f9ba7ed4ef1dd13946:
+      image_group_id: I5233
+      title: ''
+      volume_number: 25
+      total_pages: 768
+    efedb8ce00df4133bcd146b858dd3628:
+      image_group_id: I5234
+      title: ''
+      volume_number: 26
+      total_pages: 744
+    ebca2a86325140b7ad7210b30a933875:
+      image_group_id: I5235
+      title: ''
+      volume_number: 27
+      total_pages: 754
+    8a1871405c1c400da672dc22bed2ee28:
+      image_group_id: I5236
+      title: ''
+      volume_number: 28
+      total_pages: 778
+    ae5bbcebd9c548f6a996987dffa7566d:
+      image_group_id: I5237
+      title: ''
+      volume_number: 29
+      total_pages: 240
