--- a/P001732.opf/layers/v001/Pagination.yml
+++ b/P001732.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: fe48db3ce13746b1a3fcb3eb49534df7
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   233e11e749464492bbd7a6e433c164d6:
