--- a/P001732.opf/layers/v002/Pagination.yml
+++ b/P001732.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6125a806d3de410b8026cbc432545a05
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d5a1564477154ac094d30512d2268c68:
