--- a/P001732.opf/layers/v003/Pagination.yml
+++ b/P001732.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: 2337bc9e6e6f4a51821f08bbb098ee0c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2861f4e49ebc4f04941288b4649fd2e2:
