--- a/P001732.opf/layers/v004/Pagination.yml
+++ b/P001732.opf/layers/v004/Pagination.yml
@@ -1,5 +1,5 @@
 id: a8b1c5941ebd44fdba7a98394a59d657
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   c61f5014af7e44d2b912a01b0782d0ed:
