--- a/P001732.opf/layers/v005/Pagination.yml
+++ b/P001732.opf/layers/v005/Pagination.yml
@@ -1,5 +1,5 @@
 id: 94d359cb315f48afb5ae1465626bb736
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   188cd664fc714621a88cf6c896aae011:
