--- a/P001732.opf/layers/v006/Pagination.yml
+++ b/P001732.opf/layers/v006/Pagination.yml
@@ -1,5 +1,5 @@
 id: a00fcd416a6947efac1a8e6b7d7d68ab
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   a8763973bb084f02b57725132200dd38:
