--- a/P001732.opf/layers/v007/Pagination.yml
+++ b/P001732.opf/layers/v007/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4bdd2742e4a84764809980096b6cf611
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   e8884decb49246b5aacc9f02e4d7b171:
