--- a/P001732.opf/layers/v008/Pagination.yml
+++ b/P001732.opf/layers/v008/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6accefc98fcd4655875b287db99ac20c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   9e8eef01c7ed4e1d81b8a5cedb9c7296:
