--- a/P001732.opf/layers/v009/Pagination.yml
+++ b/P001732.opf/layers/v009/Pagination.yml
@@ -1,5 +1,5 @@
 id: 62a4ebe1fac6498596f9cc6e596afa50
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   a9d4357174b34f8ca9d7ae51b8ab61fc:
