--- a/P001732.opf/layers/v010/Pagination.yml
+++ b/P001732.opf/layers/v010/Pagination.yml
@@ -1,5 +1,5 @@
 id: da6697cf2cfa4294aed16c8950af98c1
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   38aba7cfaa73478cafe35e5021821cc3:
