--- a/P001732.opf/layers/v011/Pagination.yml
+++ b/P001732.opf/layers/v011/Pagination.yml
@@ -1,5 +1,5 @@
 id: 28c30d3f41314ddaae35c77ab70ad2b8
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   a700ef6eedef463b9110adb8c1babefb:
