--- a/P001732.opf/layers/v012/Pagination.yml
+++ b/P001732.opf/layers/v012/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4617fd24308b4a368f6629c42140f678
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   91160c19e7054c409514b9558c52b157:
