--- a/P001732.opf/layers/v013/Pagination.yml
+++ b/P001732.opf/layers/v013/Pagination.yml
@@ -1,5 +1,5 @@
 id: ab7b327253dd48f1ac07ca29cd09b619
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7521ef737982495ab8d5d2333b6dd2e9:
