--- a/P001732.opf/layers/v014/Pagination.yml
+++ b/P001732.opf/layers/v014/Pagination.yml
@@ -1,5 +1,5 @@
 id: dd65602fd239464ba4ba26c9c8cd2cc5
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   f8ac8c816c2245edac1b1aabe0e03c8e:
