--- a/P001732.opf/layers/v015/Pagination.yml
+++ b/P001732.opf/layers/v015/Pagination.yml
@@ -1,5 +1,5 @@
 id: 448d192a62b140688f903bc191d16d74
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   5b1d3e74a4294edcbbb915e387479c62:
