--- a/P001732.opf/layers/v016/Pagination.yml
+++ b/P001732.opf/layers/v016/Pagination.yml
@@ -1,5 +1,5 @@
 id: db2227787a694261ab544bc2685998d3
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   4dca2752ef5d444aa73e11045db7c308:
