--- a/P001732.opf/layers/v017/Pagination.yml
+++ b/P001732.opf/layers/v017/Pagination.yml
@@ -1,5 +1,5 @@
 id: bfbf0039796844ebaad158bdc7043186
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   54cdb62ef8fa462189784a19f7a08359:
