--- a/P001732.opf/layers/v018/Pagination.yml
+++ b/P001732.opf/layers/v018/Pagination.yml
@@ -1,5 +1,5 @@
 id: c42c33a333d2429d9b392e1abc53b71f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   5463ffce949e415988dfd18bc4da2622:
