--- a/P001732.opf/layers/v019/Pagination.yml
+++ b/P001732.opf/layers/v019/Pagination.yml
@@ -1,5 +1,5 @@
 id: 5474fa92266a4592b59c71b4fa06df48
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   e6a1cb8d057341fd8f8973c321860845:
