--- a/P001732.opf/layers/v020/Pagination.yml
+++ b/P001732.opf/layers/v020/Pagination.yml
@@ -1,5 +1,5 @@
 id: dec4878673f14f759bde48be5447d195
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   de57615b25bd4e5589cb7ca36abcaa7c:
