--- a/P001732.opf/layers/v021/Pagination.yml
+++ b/P001732.opf/layers/v021/Pagination.yml
@@ -1,5 +1,5 @@
 id: abdb537a44b34541afa4ca0bde131545
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   923206e7609c40acb560eb3f728df801:
