--- a/P001732.opf/layers/v022/Pagination.yml
+++ b/P001732.opf/layers/v022/Pagination.yml
@@ -1,5 +1,5 @@
 id: c273ce0ab8894c3b9fb9164ca129f61f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   328099cd07ac440dbb9f735291bf41f1:
