--- a/P001732.opf/layers/v023/Pagination.yml
+++ b/P001732.opf/layers/v023/Pagination.yml
@@ -1,5 +1,5 @@
 id: fb97528521af442589d3011e903ee6b3
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   fa74e53a0fc94f80bca30d81ed6f29ae:
