--- a/P001732.opf/layers/v024/Pagination.yml
+++ b/P001732.opf/layers/v024/Pagination.yml
@@ -1,5 +1,5 @@
 id: 29759af13ddc457fa3e67fd0d6e6eed9
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   b77f12f99b8846feb0949e16a41d1094:
