--- a/P001732.opf/layers/v025/Pagination.yml
+++ b/P001732.opf/layers/v025/Pagination.yml
@@ -1,5 +1,5 @@
 id: b85218559e6b433a9d3c2dbc60fb01d6
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   bd433fb2ac5c4432ba8de9cf39515907:
