--- a/P001732.opf/layers/v026/Pagination.yml
+++ b/P001732.opf/layers/v026/Pagination.yml
@@ -1,5 +1,5 @@
 id: b18bf8abc34648078a27035d4cdb7000
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   72aacb1229c64a83a0d008a4dd2263cc:
