--- a/P001732.opf/layers/v027/Pagination.yml
+++ b/P001732.opf/layers/v027/Pagination.yml
@@ -1,5 +1,5 @@
 id: 709346e25fe04e94af9592a127255d9e
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d3973c96427d47c9a399f09efe7833df:
