--- a/P001732.opf/layers/v028/Pagination.yml
+++ b/P001732.opf/layers/v028/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6eacfa1aabc64c6694a241aec59e6461
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   61483cd830bb4ef8b624e7b50ff24279:
