--- a/P001732.opf/layers/v029/Pagination.yml
+++ b/P001732.opf/layers/v029/Pagination.yml
@@ -1,5 +1,5 @@
 id: 9b4d32a35d6f41fda28c3192349b7c5a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   9e560eea11b441cba86b23f8ff554672:
