--- a/P001732.opf/meta.yml
+++ b/P001732.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P001732
 initial_creation_type: ocr
 created_at: 26/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:17:18.706287
 source_metadata:
   id: bdr:W29307
   title: གསུང་འབུམ། ངག་དབང་ཀུན་དགའ་བསོད་ནམས།
@@ -181,3 +181,5 @@ source_metadata:
       volume_number: 29
       total_pages: 240
       base_file: v029.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
